color&post changed

--- a/Blog-using-mean-master/FRONTEND/src/app/footer/footer.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<ul class="nav  mymenu">
+<ul class="nav  mymenu" style="background-color: #3E537C;">
     <li class="nav-item">
         <a href="https://github.com/adarshcode12/Blog_MEAN" aria-label="Github" class="nav-link text-github"><i class="fa fa-github"
                 style="font-size: 28px; color: black;"></i></a>
