--- a/Blog-using-mean-master/FRONTEND/src/app/header/header.component.css
+++ b/Blog-using-mean-master/FRONTEND/src/app/header/header.component.css
@@ -1,9 +1,11 @@
 
 
 .bg-light{
-    background-color: #fff !important;
-    height: 70px;
-    border-bottom: 2px solid black;
+    background-color: #FFC017  !important;
+    height: 75px;
+    border-bottom: #000 solid 0.5px;
+    
+
 }
 .navbar-expand-lg .navbar-nav{
     margin-right: 150px !important;
@@ -13,7 +15,8 @@
 .navbar-brand{
     font-size: 2rem;
     font-weight:500;
-    margin-left: 130px;
+    margin-left:120px;
+
 }
 .navbar-nav .nav-item{
     padding: 10px 5px;
@@ -153,4 +156,58 @@ ul.social li a{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+  }
+
+
+  /*button*/
+
+  
+  .btn11 {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #0a0a0a;
+    border: none;
+    color: #f7f5f5;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+    width: 150px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .btn11 span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .btn11 span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .btn11:hover span {
+    padding-right: 25px;
+  }
+  
+  .btn11:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+
+
+  .header_change{
+      position: fixed;
+      background: #;
+      width: 100%;
+      z-index: 1;
+
   }
