--- a/Blog-using-mean-master/FRONTEND/src/app/header/header.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/header/header.component.html
@@ -2,8 +2,8 @@
   <div style="height:50px" >
   <div class="container">
     
-  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light py-4">
-    <a class="navbar-brand" href="#">BlogApp</a>
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light py-4 ">
+    <a class="navbar-brand" href="#" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" > BLOG  TYRANT</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
       aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
           <a class="nav-link" routerLink="/myposts">MyPosts</a>
         </li>
         <li  routerLinkActive="active" *ngIf="!userIsAuthenticated">
-          <button class="button112" routerLink="/login">Start Now !</button>
+          <button class="btn11" routerLink="/login">Start Now !</button>
         </li>
 
         <li class="nav-item" routerLinkActive="active" *ngIf="userIsAuthenticated">
@@ -37,6 +37,6 @@
     </div>
   </nav>
 </div>
-<hr>
+
 </div>
 
