--- a/Blog-using-mean-master/FRONTEND/src/app/profile/view-profile/view-profile.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/profile/view-profile/view-profile.component.html
@@ -1,3 +1,4 @@
+
 <hr>
 <div class="container py-5">
     <div *ngIf="isloading" style="text-align: center;" class="loading-text">
@@ -27,24 +28,28 @@
   
      <div class="col-lg-12">
        <ng-container *ngIf="posts.length>0">
-        <div class="d-block d-md-flex podcast-entry bg-white mb-5 aos-init aos-animate"
-        *ngFor="let post of posts" data-aos="fade-up">
-        <div class="image" [style.backgroundImage]="'url('+ post.imagePath +') ' "></div>
-      <div class="text">
-        <h3 class="font-weight-light">
-          <a *ngIf="userId===post.creator"  [routerLink]="['../../myposts',post.id]"> {{ post.title }}</a>
-          <a *ngIf="userId!==post.creator"  [routerLink]="['posts',post.id]"> {{ post.title }}</a>
-        </h3>
-        <div class="text-white mb-3">
-          <span class="text-black-opacity-05">
-            <small>By Mike Smith <span class="sep">/</span>{{post.postDate | date:'short'}}</small>
-          </span>
+        
+      <div class="blog-card" *ngFor="let post of posts;let i=index" data-aos="fade-up">
+        <div class="meta" >
+          <div class="photo" [style.backgroundImage]="'url('+ post.imagePath +') ' "></div>
+          <ul class="details">
+            <li class="author" ><a *ngIf="userId===post.creator"  [routerLink]="['../../myposts',post.id]"> {{ post.title }}</a>
+              <a *ngIf="userId!==post.creator"  [routerLink]="['posts',post.id]"> {{ post.title }}</a></li>
+            
+            <li class="date">{{post.postDate | date:'short'}}</li>
+            
+          </ul>
         </div>
-
-        <div class="desc">
-          <p>{{post.content |slice:0: 170 }}{{post.content.length > 170 ? ' ...Read More' : ''}}</p>
+        <div class="description">
+          <h1><a *ngIf="userId===post.creator"  [routerLink]="['../../myposts',post.id]"> {{ post.title }}</a>
+            <a *ngIf="userId!==post.creator"  [routerLink]="['posts',post.id]"> {{ post.title }}</a></h1>
+          <p>{{post.content |slice:0: 150 }}....
+                
+            <p class="read-more">
+              <a *ngIf="userId===post.creator"  [routerLink]="['../../myposts',post.id]"> Read More</a>
+            <a *ngIf="userId!==post.creator"  [routerLink]="['posts',post.id]"> Read More</a>
+            </p>
         </div>
-      </div>
       </div>
     </ng-container>
     <div *ngIf="posts.length==0 && !isloading" style="text-align: center;" class="loading-text">
@@ -53,4 +58,3 @@
       </div>
 </div>
 </div>
-
