--- a/Blog-using-mean-master/FRONTEND/src/app/auth/login/login.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 
-<div class="container">
+<div class="container" >
 <div class="row">
-    <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <div class="col-xs-12 col-md-6 col-md-offset-3" >
         <div class="alert alert-danger" *ngIf="error">
             <p>{{ error.status }} - {{error.error.message}}</p>
         </div>
@@ -9,7 +9,7 @@
            <app-spinner></app-spinner>
         </div>
         
-        <div class="card">
+        <div class="card"style="background-color: #FFC017;">
             <div class="card-image">	
                 <h2 class="card-heading">
                 Get started
@@ -28,7 +28,7 @@
             </div>
             <br>
             <div class="form-group">
-                <button class="action-button"  type="submit" [disabled]="!authForm.valid">
+                <button class="action-button"  type="submit" [disabled]="!authForm.valid" style="background-color: black;">
                     {{ isLoginMode ? 'Login' : 'Sign Up' }}
                 </button><br><br>
                 
