--- a/Blog-using-mean-master/FRONTEND/src/app/footer/footer.component.css
+++ b/Blog-using-mean-master/FRONTEND/src/app/footer/footer.component.css
@@ -2,6 +2,7 @@
     margin: 0 auto;
     justify-content: center;
     padding-bottom: 30px;
+    background-color: #FFC017 ;
 }
 .button {
     display: flex;
@@ -9,8 +10,8 @@
     padding: 10px;
     border: 0;
     text-transform: uppercase;
-    background: rgba(0,123,255,.0627451);
-    color: rgba(0,123,255,.6);
+    background: #FFC017 ;
+    color: #FFC017 ;
     cursor: pointer;
     border-radius: 5px;
     transition: background .2s ease-in-out;
