--- a/Blog-using-mean-master/FRONTEND/src/app/footer/footer.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/footer/footer.component.html
@@ -1,6 +1,11 @@
-<ul class="nav  mymenu" style="background-color: #3E537C;">
+<ul class="nav  mymenu" >
     <li class="nav-item">
-        <a href="https://github.com/adarshcode12/Blog_MEAN" aria-label="Github" class="nav-link text-github"><i class="fa fa-github"
-                style="font-size: 28px; color: black;"></i></a>
+        
+        <a>Copyright 2019 Energy | All rights reserved. | </a>
+        <a href="post-list.component.html" style="color:black">Sitemap</a>
+        <br>
+        <a href="https://policy.medium.com/medium-terms-of-service-9db0094a1e0f" style="margin-left: 60px;">Terms</a> 
+        <a href="https://policy.medium.com/medium-privacy-policy-f03bf92035c9">&nbsp;&nbsp;&nbsp;&nbsp;Privacy</a>
+        <a href="https://help.medium.com/hc/en-us">&nbsp;&nbsp;&nbsp;&nbsp;Help</a>
     </li>
 </ul>
