--- a/Blog-using-mean-master/FRONTEND/src/app/header/header.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/header/header.component.html
@@ -3,7 +3,8 @@
   <div class="container">
     
   <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light py-4 ">
-    <a class="navbar-brand" href="#" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" > BLOG  TYRANT</a>
+    <img src="assets/icons8-bbb-150.png" style="margin-left: 30px;" width="60px">
+    <a class="navbar-brand" href="#" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" >PATRIKA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
       aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
