--- a/Blog-using-mean-master/FRONTEND/src/app/footer/footer.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/footer/footer.component.html
@@ -1,8 +1,7 @@
 <ul class="nav  mymenu" >
     <li class="nav-item">
-        
-        <a>Copyright 2019 Energy | All rights reserved. | </a>
-        <a href="post-list.component.html" style="color:black">Sitemap</a>
+        <a>Copyright 2022 Patrika | All rights reserved. | </a>
+        <a href="post-list.component.html" style="color:black">TopPage</a>
         <br>
         <a href="https://policy.medium.com/medium-terms-of-service-9db0094a1e0f" style="margin-left: 60px;">Terms</a> 
         <a href="https://policy.medium.com/medium-privacy-policy-f03bf92035c9">&nbsp;&nbsp;&nbsp;&nbsp;Privacy</a>
