--- a/Blog-using-mean-master/FRONTEND/src/app/posts/create-post/create-post.component.css
+++ b/Blog-using-mean-master/FRONTEND/src/app/posts/create-post/create-post.component.css
@@ -21,3 +21,21 @@ form{
     width: 70%;
     margin: 3rem auto;
 }
+
+
+.btn11 {
+
+        transform: translateY(0px);
+        transition: 0.3s linear;
+        background:  #000;
+        border-radius: 5px;
+      position: relative;
+      overflow: hidden;
+        cursor: pointer;
+        outline: none;
+        border: none;
+        color: #fff;
+        padding: 0;
+        margin: 0;
+        
+    }
