--- a/Blog-using-mean-master/FRONTEND/src/app/posts/post-list/post-list.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/posts/post-list/post-list.component.html
@@ -97,7 +97,7 @@
       
   
       <div class="col-lg-4" >
-        <h2>New Authors</h2>
+        <h2 style="margin-left: 60px;">New Authors</h2>
           <div class="flip-card" *ngFor="let usr of user.reverse()  | slice:0:4;" >
             <div class="flip-card-container" style="--hue: 220" >
           <div class="flip-card" >
