--- a/Blog-using-mean-master/FRONTEND/src/app/posts/post-detail/post-detail.component.html
+++ b/Blog-using-mean-master/FRONTEND/src/app/posts/post-detail/post-detail.component.html
@@ -66,5 +66,51 @@
 
       </div>
     </div>
+    <div class="form-group">
+      <label class="control-label" for="comment" #cleancomment >Your Comment</label>
+      <div class="controls">
+        <textarea name="comment"  id="comment"  class="form-control" cols="30" rows="5" placeholder="Comment" [(ngModel)] = "comment"></textarea>
+        <br><button class="btn btn-primary" *ngIf="isAuth" style="float: right;" id="savecomment" (click) = "commenting();" [routerLink]="[post.id]">Save</button>
+        <button class="btn btn-primary" *ngIf="!isAuth" style="float: right;" routerLink="/login" >Login to comment</button>
+      </div>
+    </div>
+
+    
+    
+
+    <button (click)="showcc()">Show comments</button>
+
+    
+
+
+    <div id="mydiv" class="container mt-5 mb-5" style="display: none;">
+      
+      <div class="d-flex justify-content-center row"  *ngFor="let l of comments;let i = index">
+          <div class="d-flex flex-column col-md-8">
+               <div class="commented-section mt-2">
+                      <div class="d-flex flex-row align-items-center commented-user" >
+                          <h5 class="mr-2">By {{Person[i]}}</h5><span class="dot mb-1"></span></div>
+                      <div class="comment-text-sm"><span>{{comments[myfn()]}}</span></div>
+                      <hr>
+                          
+              </div>
+          </div>
+      </div>
+
+      <div class="d-flex justify-content-center row">
+        <div class="d-flex flex-column col-md-8">
+             <div class="commented-section mt-2">
+                    <div class="d-flex flex-row align-items-center commented-user" >
+                        <h5 class="mr-2">By Keshav Mittal</h5><span class="dot mb-1"></span></div>
+                    <div class="comment-text-sm"><span>{{new_com}}</span></div>
+                    <hr>
+                        
+            </div>
+        </div>
+    </div>
+
+
+      
+    </div>
 
   </div>
